--- a/xlogo/src/app/stage-one/stage-one.component.html
+++ b/xlogo/src/app/stage-one/stage-one.component.html
@@ -1,4 +1,5 @@
-<div id="blocklyDiv" style="width: 100%; height: 100%"></div>
+<div id="blocklyDiv" style="width: 100%; height: 100%; position: absolute"></div>
+
 <xml id="toolbox" style="display: none">
   <category name="Control" colour="120">
     <block type="controls_if"></block>
@@ -14,3 +15,5 @@
     <block type="end"></block>
   </category>
 </xml>
+
+
