--- a/xlogo/src/app/stage-one/stage-one.component.html
+++ b/xlogo/src/app/stage-one/stage-one.component.html
@@ -1,19 +1,9 @@
 <div id="blocklyDiv" style="width: 100%; height: 100%; position: absolute"></div>
 
 <xml id="toolbox" style="display: none">
-  <category name="Control" colour="120">
-    <block type="controls_if"></block>
-    <block type="controls_repeat_ext" disabled="true"></block>
-  </category>
-  <category name="Text" colour="230">
-    <block type="text"></block>
-    <block type="text_print"></block>
-  </category>
-  <category name="Custom" colour="360">
-    <block type="begin"></block>
-    <block type="move"></block>
-    <block type="end"></block>
-  </category>
+  <block type="controls_if"></block>
+  <block type="controls_repeat_ext" ></block>
+  <block type="alert" ></block>
 </xml>
 
 
